# sticklogs

./: .gitignore  CMakeLists.txt  README.md
config/: db_config.yaml
src/: benchmark.cpp  benchmark_main.cpp  config_reader.cpp  config_reader.h  db_wrapper.cpp  db_wrapper.h  log.cpp  log.h  main.cpp  transaction.cpp  transaction.h  utils.h
